# video_backend

./: .env.example  .gitignore  .prettierrc  AGENTS.md  API-ENDPOINTS.md  API-OVERVIEW.md  CLAUDE.md  CONVERSION_API_HANDOFF.md  FACE_RECOGNITION_IMPLEMENTATION.md  FRONTEND-CHECKLIST.md  INDEXING-PERFORMANCE.md  README.md  bunfig.toml  drizzle.config.ts  frontend_face_implementation.md  package.json  tsconfig.json  vectorized-purring-newt.md
docs/: FACE_RECOGNITION_ARCHITECTURE.md  MEDIA_TAGGING_IMPROVEMENTS.md  backend_request.md  backend_request_creator-studio-ux.md  conversion_improvements.md  frontend-video-stats.md  stats-api.md
docs/project_face_recog/: 01-database-migration.md  02-face-recognition-architecture.md  03-deployment.md  04-environment-config.md  05-implementation-timeline.md  06-api-endpoints.md  README.md
face-service/: .env.example  .gitignore  Dockerfile  Dockerfile.rocm  README.md  pyproject.toml  run.sh
face-service/src/face_service/: __init__.py  config.py  face_engine.py  main.py
face-service/src/face_service/routes/: __init__.py  detect.py  health.py
scripts/: convert-service-to-async.sh  create-postgres-schema.sql  export-sqlite-data.ts  import-postgres-data.ts  migrate-creator-face-thumbnails.ts  test-postgres-connection.ts
src/: index.ts  server.ts  test-setup.ts
src/config/: constants.ts  database.ts  drizzle.ts  env.ts  presets.ts
src/database/: apply-migration.ts  schema.sql
src/utils/: errors.ts  file-utils.ts  image-processing.ts  logger.ts  path-parser.ts  validation.ts
tests/helpers/: test-utils.ts
(+175 files in other folders)
